--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
             "color": "#ff0019",
             "messages": [
               "ILoveYou",
-              "Yeu Em Hang",
-              "Em Hang Cute VL"
+              "Yeu Em Ngoc",
+              "Em Ngoc Cute VL"
             ],
             "music": "//thanhdieu.com/music.mp3"
           },
