--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
             "fontName": "Mali",
             "color": "#ff0019",
             "messages": [
-              "Github WusThanhDieu",
-              "Test 1",
-              "Test 2"
+              "Em Ngoc Cute",
+              "GoodNight ILoveyou",
+              "Max Dang Yeuu"
             ],
             "music": "//thanhdieu.com/music.mp3"
           },
